# barrier-certs-fw

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindQuadProgpp.cmake
docs/: doxyfile.in
docs/source/: conf.py.in  index.rst
include/barrier-certs/: BarrierCert.h  ControlsIO.h  HelperTypes.h  LimitedSensing.h  Utilities.h  VehicleTypes.h
include/barrier-certs/plugins/autonomy/Wpt/: Wpt.h  Wpt.xml
include/barrier-certs/plugins/controller/NavigationFunction/: NavigationFunction.h  NavigationFunction.xml
include/barrier-certs/plugins/controller/UnicycleControllerBarrier/: UnicycleControllerBarrier.h  UnicycleControllerBarrier.xml
missions/: barrier_certs.xml  barrier_certs_example.xml  barrier_certs_sensing.xml  barrier_certs_sensing_ex1.xml  barrier_certs_sensing_ex2.xml  barrier_certs_start_on_left.xml  barrier_certs_start_on_right.xml  nav_func.xml
missions/limited_sensing_videos/: arrows.xml  back_view.xml
missions/video_missions/: barrier_certs_gamma_turn_follow.xml  barrier_certs_gamma_turn_follow_camera_change.xml  barrier_certs_gamma_turn_top.xml  barrier_certs_gamma_turn_top_with_goal.xml  barrier_certs_gamma_turn_top_zoom.xml
scripts/: example_many_veh.py  plotter.py  run.py  scenarios.py
scripts/archive/: crop.py  plot_safe_sets.py  plotter_test.py  test_dist_sq_fw_fw_turn.py  test_dist_sq_straight.py  turn_rate.py
src/: BarrierCert.cpp  CMakeLists.txt  ControlsIO.cpp  LimitedSensing.cpp  Utilities.cpp
src/plugins/autonomy/: CMakeLists.txt
src/plugins/autonomy/Wpt/: CMakeLists.txt  Wpt.cpp
src/plugins/controller/NavigationFunction/: CMakeLists.txt  NavigationFunction.cpp
src/plugins/controller/UnicycleControllerBarrier/: CMakeLists.txt  UnicycleControllerBarrier.cpp
src/plugins/interaction/BarrierCertCentralized/: BarrierCertCentralized.cpp  CMakeLists.txt
src/plugins/metrics/: CMakeLists.txt
src/plugins/metrics/BarrierCertMetrics/: BarrierCertMetrics.cpp  CMakeLists.txt
test/: CMakeLists.txt  test_utils.cpp
(+4 files in other folders)
